# city

./: .gitignore  API.md  CLAUDE.md  DIAGNOSTIC_POPUP.md  FIX_CLAMP_TO_WINDOW.md  FIX_POPUPS_DEMARRAGE.md  FIX_REPLACEMENT_FENETRE.md  GUIDE_DETECTION_MULTISCALE.md  INSTALLATION.md  README.md  TODO_ETATS_CHEMINS.md  calculate_ratios.py  check_intel_xpu.py  copier_capture.py  debug_detection_popup.py  extract_icon.py  get_window_dimensions.py  main.py  maintest.py  measure_bluestacks_header.py  pyproject.toml  requirements.txt  run.bat  setup_env_cpu.bat  setup_env_gpu.bat  setup_env_intel.bat  solve_bandeaux.py  test_config_sans_largeur.py  test_detection_deplacement.py  test_find_ratio.py  test_integration_etats.py  test_logique_placement.py  test_multiscale_detection.py  test_position_negative.py  test_resize_height.py
actions/: __init__.py  action.py  action_reprise_preparer_tour.py  item.py  liste_actions.py  sequence_actions.py
actions/bluestacks/: __init__.py  action_lancer_raccourci.py  action_verifier_pret.py  action_verifier_pret_rapide.py  action_verifier_timeout.py
actions/boucle/: __init__.py  action_if.py  action_loops.py  action_switch.py
actions/longue/: __init__.py  action_log_periodique.py  action_longue.py
actions/scrcpy/: __init__.py  action_attendre_connexion.py  action_lancer_scrcpy.py  action_sauvegarder_capture.py
actions/simple/: __init__.py  action_attendre.py  action_bouton.py  action_log.py
config/: etat-chemin.toml
core/: __init__.py  adb_manager.py  chemin.py  engine.py  etat.py  etat_inconnu.py  exceptions.py  gestionnaire_etats.py  message_bus.py  popup.py  simple_scheduler.py  slot_manager.py  timer_manager.py  user_activity_detector.py  window_manager.py  window_state_manager.py
data/: slots.json  timers.json  window_states.json
docs/: cahier_des_charges_generateur.md  specifications_techniques_generateur.md
erreurs/: __init__.py  item_erreur.py  liste_erreurs.py
generateur/: .env.example  .env.exemple.env  CLAUDE.md  TODOS.md  __init__.py  config.py  main.py  requirements.txt  run.py
generateur/api/: __init__.py
generateur/api/routes/: __init__.py  action_routes.py  actions.py  chemins.py  database_routes.py  erreur_routes.py  etats.py  ia.py  images.py  import_routes.py  scrcpy.py  sync_routes.py  templates.py
generateur/generators/: __init__.py  action_generator.py  action_longue_generator.py  chemin_generator.py  erreur_generator.py  etat_generator.py
generateur/generators/templates/: action.py.j2  action_longue.py.j2  chemin.py.j2  (+1 more)
generateur/models/: __init__.py  schemas.py  schemas_action_longue.py
generateur/services/: __init__.py  action_longue_service.py  action_service.py  chemin_service.py  claude_service.py  database_service.py  erreur_service.py  etat_service.py  image_service.py  import_service.py  parser_service.py  scrcpy_service.py  sync_service.py  template_service.py
generateur/templates/: index.html
generateur/utils/: __init__.py
manoirs/: __init__.py  config_manoirs.py  manoir_base.py  manoir_scrcpy.py
manoirs/chemins/: __init__.py  chemin_attendre_chargement.py  chemin_fermer_popup_connexion.py  chemin_fermer_popup_gratuit.py  chemin_fermer_popup_rapport.py  chemin_lancer_bluestacks.py  chemin_ville_vers_non_lance.py
manoirs/chemins_scrcpy/: __init__.py  chemin_attendre_appareil.py  chemin_lancer_scrcpy.py
manoirs/etats/: __init__.py  etat_chargement.py  etat_non_lance.py  etat_popup_connexion.py  etat_popup_gratuit.py  etat_popup_rapport.py  etat_ville.py
manoirs/etats_scrcpy/: __init__.py  etat_scrcpy_connecte.py  etat_scrcpy_lance.py  etat_scrcpy_non_connecte.py
manoirs/instances/: __init__.py  manoir_bluestacks.py  manoir_principal.py  manoir_scrcpy_exemple.py  manoir_virtuel.py
templates/: README.md
templates/ville/: README.md
tests/: __init__.py  test_manoir_bluestacks.py
utils/: __init__.py  config.py  coordinates.py  logger.py
vision/: __init__.py  color_detector.py  image_matcher.py  ocr_engine.py  screen_capture.py  template_manager.py
(+32 files in other folders)
